--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,8 @@
 
 
-<h1>welcome to Bookers !!</h1>
+<h1>welcome to 
+  <span class="glyphicon glyphicon-book" aria-hidden="true">Bookers !!</span>
+</h1>
 <p>In Bookers,<br>
 
 <p>you can share and exchange your opinions , inpressions , and emotions<br>
@@ -10,3 +12,5 @@ about various books!</p>
 
 
 <p>CopyRight Infratop.inc</p>
+<%= link_to "Log in", new_user_session_path, class:"btn btn-info" %>
+<%= link_to "Sign up", new_user_registration_path, class:"btn btn-success btn-default" %>
