--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,17 +8,40 @@
 
 
 <!--新規投稿ページ-->
-<%= form_for(@book) do |f| %>
 <h1>New book</h1>
+<%= form_for(@book) do |f| %>
+
 
 <p>Title</p>
 <%= f.text_field :title %>
 <p>Opinion</p>
 
-<%= f.text_area :opinion %>
+<%= f.text_area :body %>
 <%= f.submit 'Create Book', class:"btn btn-primary" %>
 <% end %>
 
 
+
 <!--book一覧-->
-<%= 
+
+<h1>Books</h1>
+  <table class="table">
+	<thead>
+		<tr>
+			<th></th>
+			<th>Title</th>
+			<th>Opinion</th>
+		</tr>
+	</thead>
+
+	<tbody>
+	<% @books.each do |book| %>
+		<tr>
+			<td></td>　　　<!--修正-->
+			<th><%= @book.title %></th>
+			<td><%= @book.body %></td>
+		</tr>
+	</tbody>
+</table>
+
+<% end %>
