--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,1 +1,25 @@
 <h1>showページ</h1>
+
+
+
+<h1>Book detail</h1>
+  <table class="table">
+	<thead>
+		<tr>
+			<th></th>
+			<th>Title</th>
+			<th>Opinion</th>
+		</tr>
+	</thead>
+
+	<tbody>
+	<% @books.each do |book| %>
+		<tr>
+			<td></td>　　　<!--修正-->
+			<th><%= @book.title %></th>
+			<td><%= @book.body %></td>
+		</tr>
+	</tbody>
+</table>
+
+<% end %>
