--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,24 @@
 <p>show</p>
+
+<h1>Books</h1>
+  <table class="table">
+	<thead>
+		<tr>
+			<th></th>
+			<th>Title</th>
+			<th>Opinion</th>
+		</tr>
+	</thead>
+
+	<tbody>
+	<% @books.each do |book| %>
+		<tr>
+			<td>地球</td>　　　<!--修正-->
+			<th><%= @book.title %></th>
+			<td><%= @book.body %></td>
+		</tr>
+	</tbody>
+</table>
+
+<% end %>
+
