--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,34 +13,43 @@
 
 
 <div id="slidemenu">
+
   <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
     <% if user_signed_in? %>
-      <li>
-        <%= link_to "Home", root_path %>  <!-- 変更-->
+      <li class="">
+        <%= link_to "Home", users_path %>
+        <span class="glyphicon glyphicon-home home" aria-hidden="true"></span>
       </li>
       <li class="">
         <%= link_to 'Users', users_path %>
+        <span class="glyphicon glyphicon-user users" aria-hidden="true"></span>
       </li>
       <li class="">
         <%= link_to 'Books', books_path %>
+        <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
       </li>
       <li class="">
         <%= link_to "logout", destroy_user_session_path, method: :delete %>
+        <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
       </li>
 
 
     <% else %>
       <li class="">
         <%= link_to "Home", root_path %>
+        <span class="glyphicon glyphicon-home home" aria-hidden="true"></span>
       </li>
       <li class="">
         <%= link_to "About", homes_about_path %>
+        <span class="glyphicon glyphicon-link about" aria-hidden="true"></span>
       </li>
       <li class="">
         <%= link_to "Sign up", new_user_registration_path %>
+        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
       </li>
       <li class="">
         <%= link_to "ログイン", new_user_session_path %>
+        <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
       </li>
     <% end %>
   </ul>
