--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,24 +1,62 @@
-<p>show</p>
+<p>ログイン後はマイページに飛ぶ、ログイン後のHomeりんく</p>
 
-<h1>Books</h1>
+<!--user info-->
+<div class="col-xs-3">
+<h2>User info</h2>
+  <table class="table">
+  	  	<!--alt="No image-->
+  	<tr>
+  		<%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+    </tr>
+    <tr>
+      <th>name</th>
+      <!--userを定義する-->
+      <th><%= @user.name %></th>
+    </tr>
+    <tr>
+      <th>introduction</th>
+      <th></th>
+    </tr>
+    <tr>
+      	<!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
+       <th><button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></button></th>
+    </tr>
+ </table>
+
+
+
+<!-- new book-->
+<h1>New Book</h1>
+<%= form_for(@book) do |f| %>
+
+<p>Title</p>
+<%= f.text_area :title %>
+
+<p>Opinion</p>
+<%= f.text_field :body %>
+
+<%= f.submit 'Create Book', class:"btn btn-primary" %>
+<% end %>
+
+
+
+
+<!-- user一覧-->
+<h1>Users</h1>
   <table class="table">
 	<thead>
 		<tr>
-			<th></th>
-			<th>Title</th>
-			<th>Opinion</th>
+			<th>image</th>
+			<th>name</th>
 		</tr>
 	</thead>
-
 	<tbody>
-	<% @books.each do |book| %>
+	  <% @users.each do |user| %>
 		<tr>
-			<td>地球</td>　　　<!--修正-->
-			<th><%= @book.title %></th>
-			<td><%= @book.body %></td>
+			<td>image</td>　　　<!--修正-->
+			<td><%= @user.name %></td>
+			<td>Show</td><!--その投稿をしたユーザーのプロフィール詳細画面へ-->
 		</tr>
+	  <% end %>
 	</tbody>
 </table>
-
-<% end %>
-
