containerクラス挿入

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,19 @@
 
   <body>
 
+<% if flash[:notice] %>
+  <div class="flash">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
+<% if flash[:alert] %>
+  <div class="flash">
+    <p><%= flash[:alert] %></p>
+  </div>
+<% end %>
+
+
+
 
 <div id="slidemenu">
 
