--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,16 +1,35 @@
 <!--user info-->
 
-<h1>User info</h1>
+<div class="container">
+	<h1>User info</h1>
 
-<%= form_for(@user) do |f| %>
-<p>Name</p>
-<%= f.text_field :name %>
+	<%= form_for(@user) do |f| %>
+	<!--エラーメッセ挿入-->
+	<% if @user.errors.any? %>
+	  <div class="alert">
+		<h2><%= pluralize(@user.errors.count, "error")%>prohibited this obj from being saved:</h2>
 
-<p>Image</p>
-<p><%= f.attachment_field :profile_image %>選択されていません</p>
+		<ul>
+			<% @user.errors.full_messages.each do |message| %>
+			<li><%= message %></li>s
+			<% end %>
+		</ul>
+	  </div>
+	<% end %>
 
-<p>Introduction</p>
-<%= f.text_area :introduction %>
+	<p>Name</p>
+	<%= f.text_field :name %>
 
-<p><%= f.submit 'Update User' %></p>
-<% end %>
+	<p>Image</p>
+	<p><%= f.attachment_field :profile_image %></p>
+
+	<p>Introduction</p>
+	<%= f.text_area :introduction %>
+
+	<p><%= f.submit 'Update User' %></p>
+	<% end %>
+
+</div>
+</div>
+
+
