--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,67 +1,80 @@
 <!--user info-->
 
-<div class="col-xs-3">
-<h2>User info</h2>
-  <table class="table">
-  	  	<!--alt="No image-->
-  	<tr>
-  		<%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
-    </tr>
-    <tr>
-      <th>name</th>
-      <th><%= @user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <th></th>
-    </tr>
-    <tr>
-      	<!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
-       <th>
-        <button type="button" class="btn btn-default" aria-label="Left Align">
-             <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-             <%= link_to "", root_path %>  <!--editへのページ遷移-->
-        </button>
+
+<div class="container">
+  <div class="row">
+
+    <div class="col-xs-3">
+      <h2>User info</h2>
+      <table class="table">
+        <!--alt="No image-->
+        <tr>
+          <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+        </tr>
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+        <tr>
+         <!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
+         <th>
+          <button type="button" class="btn btn-default" aria-label="Left Align">
+           <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+           <%= link_to "Edit", edit_user_path(@user) %>  <!--editへのページ遷移-->
+         </button>
        </th>
-    </tr>
+     </tr>
+   </table>
+ </div>
+
+
+ <div class="col-xs-9">
+   <!-- user一覧-->
+   <h1>Users</h1>
+   <table class="table">
+     <thead>
+      <tr>
+       <th>image</th>
+       <th>name</th>
+     </tr>
+   </thead>
+   <tbody>
+     <% @users.each do |user| %>
+     <tr>
+       <td>image</td>
+       <td><%= user.name %></td>
+      <td><%= link_to "Show", root_path %></td> <!--投稿をしたユーザーのページ、設定はできない-->
+     </tr>
+     <% end %>
+   </tbody>
  </table>
 
-
-
-<!-- new book-->
-<h1>New Book</h1>
-<%= form_for(@book) do |f| %>
-
-<p>Title</p>
-<%= f.text_area :title %>
-
-<p>Opinion</p>
-<%= f.text_field :body %>
-
-<%= f.submit 'Create Book', class:"btn btn-primary" %>
-
-
-<% end %>
+  </div>
+</div>
 
 
 
+   <!-- new book-->
+<div class="row">
+ <div class="col-xs-3">
 
-<!-- user一覧-->
-<h1>Users</h1>
-  <table class="table">
-	<thead>
-		<tr>
-			<th>image</th>
-			<th>name</th>
-		</tr>
-	</thead>
-	<tbody>
-	  <% @users.each do |user| %>
-		<tr>
-			<td>image</td>
-			<td><%= user.name %></td>
-			<td>Show</td><!--プロフィール詳細画面へ-->
-		</tr>
-	  <% end %>
-	</tbody>
-</table>
+   <h1>New Book</h1>
+   <%= form_for(@book) do |f| %>
+
+   <p>Title</p>
+   <%= f.text_area :title %>
+
+   <p>Opinion</p>
+   <%= f.text_field :body %>
+
+   <%= f.submit 'Create Book', class:"btn btn-primary" %> <!--ボタンをしたに並べる-->
+   <% end %>
+ </div>
+</div>
+
+
+</div>
