--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,47 +1,83 @@
-<p>books index</p>
 
 
-<!--use info -->
-<h1>User info</h1>
+<div class="container">
+  <div class="row">
+    <!--use info -->
+
+    <div class="col-xs-3">
+      <h2>User info</h2>
+      <table class="table">
+        <!--alt="No image-->
+        <tr>
+          <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+        </tr>
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+        <tr>
+         <!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
+         <th>
+          <button type="button" class="btn btn-default" aria-label="Left Align">
+           <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+           <%= link_to "Edit", root_path %>  <!--users/editへのページ遷移-->
+         </button>
+       </th>
+     </tr>
+   </table>
+ </div>
 
 
 
+ <!--book一覧-->
+ <div class="col-xs-9">
 
-<!--新規投稿ページ-->
-<h1>New book</h1>
-<%= form_for(@book) do |f| %>
-
-
-<p>Title</p>
-<%= f.text_field :title %>
-<p>Opinion</p>
-
-<%= f.text_area :body %>
-<%= f.submit 'Create Book', class:"btn btn-primary" %>
-<% end %>
-
-
-
-<!--book一覧-->
-
-<h1>Books</h1>
+  <h1>Books</h1>
   <table class="table">
-	<thead>
-		<tr>
-			<th></th>
-			<th>Title</th>
-			<th>Opinion</th>
-		</tr>
-	</thead>
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+    </thead>
 
-	<tbody>
-	<% @books.each do |book| %>
-		<tr>
-			<td></td>　　　<!--修正-->
-			<th><%= @book.title %></th>
-			<td><%= @book.body %></td>
-		</tr>
-	</tbody>
-</table>
+    <tbody>
+      <% @books.each do |book| %>
+      <tr>
+        <td></td>　　　<!--修正-->
+        <th><%= @book.title %></th>
+        <td><%= @book.body %></td>
+      </tr>
 
-<% end %>
+    </tbody>
+   
+  </table>
+ <% end %>
+</div>
+
+
+
+
+<div class="row">
+  <div class="col-xs-9">
+    <!--新規投稿ページ-->
+    <h1>New book</h1>
+    <%= form_for(@book) do |f| %>
+
+
+    <p>Title</p>
+    <%= f.text_field :title %>
+    <p>Opinion</p>
+
+    <%= f.text_area :body %>
+    <%= f.submit 'Create Book', class:"btn btn-primary" %>
+    <% end %>
+
+  </div>
+</div>
+</div>
