--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,58 +1,75 @@
-<h1>showページ</h1>
+    <div class="col-xs-3">
+      <h2>User info</h2>
+      <table class="table">
+        <!--alt="No image-->
+        <tr>
+          <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+        </tr>
+        <tr>
+          <th>name</th>
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th>
+        </tr>
+        <tr>
+         <!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
+         <th>
+          <button type="button" class="btn btn-default" aria-label="Left Align">
+           <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+           <%= link_to "Edit", root_path %>  <!--editへのページ遷移-->
+         </button>
+       </th>
+     </tr>
+   </table>
+ </div>
+	<!--book detail-->
+	<div class="col-xs-9">
+		<h1>Book detail</h1>
+		<table class="table">
+			<thead>
+				<tr>
+					<th></th>
+					<th>Title</th>
+					<th>Opinion</th>
+				</tr>
+			</thead>
+			<tbody>
+				<!--同じ内容が繰り返されるので、修正-->
+				<% @books.each do |book| %>
+				<tr>
 
-<!--user info-->
-<!-- @userを定義してないからエラーになる-->
-<h1>User info</h1>
-<div class="profile-container">
-  <h3 class="profile-name"><%= @user.name %></h3>
-  <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+					<td>image</td>　　　<!--修正-->
+					<td><%= @book.title %></td>
+					<td><%= @book.body %></td>
+					<td>edit</td>
+					<td>destroy</td><!--ボタンの色-->
+						<!--ログインしているユーザーだったら削除ができるようにする-->
+				</tr>
+				<% end %>
 
-</div>
 
+
+			</tbody>
+		</table>
+	</div>
 
 <!-- new book-->
-<h1>New Book</h1>
-<%= form_for(@book) do |f| %>
+<div class="row">
+	<div class="col-xs-3">
+		<h1>New Book</h1>
+		<%= form_for(@book) do |f| %>
 
-<p>Title</p>
-<%= f.text_area :title %>
+		<p>Title</p>
+		<%= f.text_area :title %>
 
-<p>Opinion</p>
-<%= f.text_field :body %>
+		<p>Opinion</p>
+		<%= f.text_field :body %>
 
-<%= f.submit 'Create Book', class:"btn btn-primary" %>
+		<%= f.submit 'Create Book', class:"btn btn-primary" %>
 
-
-<% end %>
-
-
-<h1>Book detail</h1>
-  <table class="table">
-	<thead>
-		<tr>
-			<th></th>
-			<th>Title</th>
-			<th>Opinion</th>
-		</tr>
-	</thead>
-	<tbody>
-		<!--同じ内容が繰り返されるので、修正-->
-	  <% @books.each do |book| %>
-		<tr>
-			<td>image</td>　　　<!--修正-->
-			<td><%= @book.title %></td>
-			<td><%= @book.body %></td>
-			<td>edit</td>
-			<td>
-				<!--ログインしているユーザーだったら削除ができるようにする-->
-				<% if @book.user_id == current_user.id %>
-				<%= link_to "削除", book_path(book), method: :delete %>
-				<% end %>
-			</td>
-		</tr>
-	  <% end %>
-	</tbody>
-</table>
-
-
-
+		<% end %>
+	</div>
+</div>
+</div>
