--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,62 +1,81 @@
-<p>ログイン後はマイページに飛ぶ、ログイン後のHomeりんく</p>
 
-<!--user info-->
-<div class="col-xs-3">
-<h2>User info</h2>
-  <table class="table">
-  	  	<!--alt="No image-->
-  	<tr>
-  		<%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
-    </tr>
-    <tr>
-      <th>name</th>
-      <!--userを定義する-->
-      <th><%= @user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <th></th>
-    </tr>
-    <tr>
-      	<!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
-       <th><button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-wrench" aria-hidden="true"></span></button></th>
-    </tr>
+
+<div class="container">
+  <div class="row">
+
+
+    <!--user info-->
+    <div class="col-xs-3">
+      <h2>User info</h2>
+      <table class="table">
+        <!--alt="No image-->
+        <tr>
+          <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+        </tr>
+        <tr>
+          <th>name</th>
+          <!--userを定義する-->
+          <th><%= @user.name %></th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th><%= @user.introduction %></th> <!--nameと色が違う-->
+        </tr>
+        <tr>
+         <!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
+         <th><button type="button" class="btn btn-default" aria-label="Left Align">
+            <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+            <%= link_to "Edit", edit_user_path(@user) %>  <!--editへのページ遷移-->
+          </button>
+         </th>
+       </tr>
+     </table>
+   </div>
+
+
+   <!-- user一覧-->
+   <div class="col-xs-9">
+
+    <h1>Books</h1>
+    <table class="table">
+     <thead>
+      <tr>
+       <th></th>
+       <th>Title</th>
+       <th>opinion</th>
+       <td>
+     </tr>
+   </thead>
+   <tbody>
+     <% @users.each do |user| %>
+     <tr>
+       <td>image</td>　　　<!--修正-->
+       <td><%= user.name %></td><!--その投稿をしたユーザーのプロフィール詳細画面へ-->
+       <td><%= @onebook.body %></td> <!--bookモデルのbody値が欲しい-->
+     </tr>
+     <% end %>
+   </tbody>
  </table>
-
+</div>
+</div>
 
 
 <!-- new book-->
-<h1>New Book</h1>
-<%= form_for(@book) do |f| %>
+<div class="row">
+  <div class="col-xs-3">
 
-<p>Title</p>
-<%= f.text_area :title %>
+    <h1>New Book</h1>
+    <%= form_for(@book) do |f| %>
 
-<p>Opinion</p>
-<%= f.text_field :body %>
+    <p>Title</p>
+    <%= f.text_area :title %>
 
-<%= f.submit 'Create Book', class:"btn btn-primary" %>
-<% end %>
+    <p>Opinion</p>
+    <%= f.text_field :body %>
 
+    <%= f.submit 'Create Book', class:"btn btn-primary" %>
+    <% end %>
 
-
-
-<!-- user一覧-->
-<h1>Users</h1>
-  <table class="table">
-	<thead>
-		<tr>
-			<th>image</th>
-			<th>name</th>
-		</tr>
-	</thead>
-	<tbody>
-	  <% @users.each do |user| %>
-		<tr>
-			<td>image</td>　　　<!--修正-->
-			<td><%= @user.name %></td>
-			<td>Show</td><!--その投稿をしたユーザーのプロフィール詳細画面へ-->
-		</tr>
-	  <% end %>
-	</tbody>
-</table>
+  </div>
+</div>
+</div>
