部分テンプレート制作前

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -69,7 +69,7 @@
     <h1>New book</h1>
     <%= form_for(@book) do |f| %>
 
-
+<!--エラーメッセ--users/edit参照-->
     <p>Title</p>
     <%= f.text_field :title %>
     <p>Opinion</p>
