--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -47,11 +47,11 @@
      </tr>
    </thead>
    <tbody>
-     <% @users.each do |user| %>
+     <% @user.books.each do |book| %>
      <tr>
        <td>image</td>　　　<!--修正-->
-       <td><%= user.name %></td><!--その投稿をしたユーザーのプロフィール詳細画面へ-->
-       <td><%= @onebook.body %></td> <!--bookモデルのbody値が欲しい-->
+       <td><%= book.title %></td><!--その投稿をしたユーザーのプロフィール詳細画面へ-->
+       <td><%= book.body %></td> <!--bookモデルのbody値が欲しい-->
      </tr>
      <% end %>
    </tbody>
@@ -66,7 +66,7 @@
 
     <h1>New Book</h1>
     <%= form_for(@book) do |f| %>
-
+<!--エラーメッセ--users/edit参照-->
     <p>Title</p>
     <%= f.text_area :title %>
 
