--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,41 +1,12 @@
 
-
 <div class="container">
-  <div class="row">
-    <!--use info -->
-
-    <div class="col-xs-3">
-      <h2>User info</h2>
-      <table class="table">
-        <!--alt="No image-->
-        <tr>
-          <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
-        </tr>
-        <tr>
-          <th>name</th>
-          <th><%= @user.name %></th>
-        </tr>
-        <tr>
-          <th>introduction</th>
-          <th><%= @user.introduction %></th>
-        </tr>
-        <tr>
-         <!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
-         <th>
-          <button type="button" class="btn btn-default" aria-label="Left Align">
-           <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-           <%= link_to "Edit", root_path %>  <!--users/editへのページ遷移-->
-         </button>
-       </th>
-     </tr>
-   </table>
- </div>
-
+  <div clsss="row">
+  <!--use info -->
+  <%= render 'layouts/userinfo', user: @user %>
 
 
  <!--book一覧-->
- <div class="col-xs-9">
-
+<div class="col-xs-9">
   <h1>Books</h1>
   <table class="table">
     <thead>
@@ -45,39 +16,22 @@
         <th>Opinion</th>
       </tr>
     </thead>
-
     <tbody>
       <% @books.each do |book| %>
       <tr>
         <td></td>　　　<!--修正-->
-        <th><%= @book.title %></th>
-        <td><%= @book.body %></td>
+        <th><%= book.title %></th>
+        <td><%= book.body %></td>
       </tr>
-
+      <% end %>
     </tbody>
-   
   </table>
- <% end %>
+</div>
 </div>
 
 
+　　<!--新規投稿-->
+　　<%= render 'layouts/newbook', book: @book %>
 
 
-<div class="row">
-  <div class="col-xs-9">
-    <!--新規投稿ページ-->
-    <h1>New book</h1>
-    <%= form_for(@book) do |f| %>
-
-<!--エラーメッセ--users/edit参照-->
-    <p>Title</p>
-    <%= f.text_field :title %>
-    <p>Opinion</p>
-
-    <%= f.text_area :body %>
-    <%= f.submit 'Create Book', class:"btn btn-primary" %>
-    <% end %>
-
-  </div>
-</div>
 </div>
