--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,73 +1,42 @@
-    <div class="col-xs-3">
-      <h2>User info</h2>
-      <table class="table">
-        <!--alt="No image-->
-        <tr>
-          <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
-        </tr>
-        <tr>
-          <th>name</th>
-          <th><%= @user.name %></th>
-        </tr>
-        <tr>
-          <th>introduction</th>
-          <th><%= @user.introduction %></th>
-        </tr>
-        <tr>
-         <!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
-         <th>
-          <button type="button" class="btn btn-default" aria-label="Left Align">
-           <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-           <%= link_to "Edit", root_path %>  <!--editへのページ遷移-->
-         </button>
-       </th>
-     </tr>
-   </table>
- </div>
-	<!--book detail-->
-	<div class="col-xs-9">
-		<h1>Book detail</h1>
-		<table class="table">
-			<thead>
-				<tr>
-					<th></th>
-					<th>Title</th>
-					<th>Opinion</th>
-				</tr>
-			</thead>
-			<tbody>
-				<!--同じ内容が繰り返されるので、修正-->
-				<% @books.each do |book| %>
-				<tr>
 
-					<td>image</td>　　　<!--修正-->
-					<td><%= @book.title %></td>
-					<td><%= @book.body %></td>
-					<td>edit</td>
-					<td>destroy</td><!--ボタンの色-->
-						<!--ログインしているユーザーだったら削除ができるようにする-->
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
+<div class="container">
+	<div clsss="row">
+		<!--use info -->
+		<%= render 'layouts/userinfo', user: @user %>
+
+
+		<!--book detail-->
+		<div class="col-xs-9">
+			<h1>Book detail</h1>
+			<table class="table">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Title</th>
+						<th>Opinion</th>
+					</tr>
+				</thead>
+				<tbody>
+					<% @books.each do |book| %>
+					<tr>
+						<td>image</td>　　　<!--画像修正-->
+						<td><%= book.title %></td>
+						<td><%= book.body %></td>
+						<td><span class="label label-success">Edit</span></td>
+						<td><span class="label label-danger">Destroy</span></td>
+						<!--ボタンのサイズと文字の色が微妙に違う-->
+					</tr> <!--新規投稿後は、最新の投稿のみ表示される。且つ画像をクリックすると、投稿一覧ページへ飛ぶ--><!--リンク設定-->
+					<% end %>
+				</tbody>
+			</table>
+		</div>
 	</div>
 
 
-<!-- new book-->
-<div class="row">
-	<div class="col-xs-3">
-		<h1>New Book</h1>
-		<%= form_for(@book) do |f| %>
-<!--エラーメッセ--users/edit参照-->
-		<p>Title</p>
-		<%= f.text_area :title %>
 
-		<p>Opinion</p>
-		<%= f.text_field :body %>
+	　<!--新規投稿-->
+	　　<%= render 'layouts/newbook', book: @book %>
 
-		<%= f.submit 'Create Book', class:"btn btn-primary" %>
 
-		<% end %>
-	</div>
-</div>
+
 </div>
