--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,75 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Bookers2</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Bookers2</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
+<body>
 
-<% if flash[:notice] %>
+  <% if flash[:notice] %>
   <div class="flash">
     <%= flash[:notice] %>
   </div>
-<% end %>
-<% if flash[:alert] %>
+  <% end %>
+  <% if flash[:alert] %>
   <div class="flash">
     <p><%= flash[:alert] %></p>
   </div>
-<% end %>
+  <% end %>
 
 
 
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <nav class="nav navbar-nav navbar-left">
+        <!--あってもなくても変わらない?
+         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarEexample">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+  -->
+          <span>Bookers</span>
+        </nav>
 
-<div id="slidemenu">
+          <ul class="nav navbar-nav navbar-right">
+            <% if user_signed_in? %>
+              <li>
+                <%= link_to "Home", users_path, class: "glyphicon glyphicon-home home", "aria-hidden": true %>
+              </li>
+              <li>
+                <%= link_to 'Users', users_path %>
+                <span class="glyphicon glyphicon-user users" aria-hidden="true"></span>
+              </li>
+              <li>
+                <%= link_to 'Books', books_path %>
+                <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+              </li>
+              <li>
+                <%= link_to "logout", destroy_user_session_path, method: :delete %>
+                <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+              </li>
 
-  <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
-    <% if user_signed_in? %>
-      <li class="">
-        <%= link_to "Home", users_path %>
-        <span class="glyphicon glyphicon-home home" aria-hidden="true"></span>
-      </li>
-      <li class="">
-        <%= link_to 'Users', users_path %>
-        <span class="glyphicon glyphicon-user users" aria-hidden="true"></span>
-      </li>
-      <li class="">
-        <%= link_to 'Books', books_path %>
-        <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
-      </li>
-      <li class="">
-        <%= link_to "logout", destroy_user_session_path, method: :delete %>
-        <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
-      </li>
-
-
-    <% else %>
-      <li class="">
-        <%= link_to "Home", root_path %>
-        <span class="glyphicon glyphicon-home home" aria-hidden="true"></span>
-      </li>
-      <li class="">
-        <%= link_to "About", homes_about_path %>
-        <span class="glyphicon glyphicon-link about" aria-hidden="true"></span>
-      </li>
-      <li class="">
-        <%= link_to "Sign up", new_user_registration_path %>
-        <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
-      </li>
-      <li class="">
-        <%= link_to "ログイン", new_user_session_path %>
-        <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
-      </li>
-    <% end %>
-  </ul>
-</div>
-
-
-
-    <%= yield %>
-  </body>
+            <% else %>
+              <li>
+                <%= link_to "Home", root_path %>
+                <span class="glyphicon glyphicon-home home" aria-hidden="true"></span>
+              </li>
+              <li>
+                <%= link_to "About", homes_about_path %>
+                <span class="glyphicon glyphicon-link about" aria-hidden="true"></span>
+              </li>
+              <li>
+                <%= link_to "Sign up", new_user_registration_path %>
+                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+              </li>
+              <li>
+                <%= link_to "ログイン", new_user_session_path %>
+                <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+              </li>
+            <% end %>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  <%= yield %>
+</body>
 </html>
