--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,81 +1,39 @@
-
-
 <div class="container">
-  <div class="row">
+  <div clsss="row">
+    <%= render 'layouts/userinfo', user: @user %>
 
 
-    <!--user info-->
-    <div class="col-xs-3">
-      <h2>User info</h2>
+
+    <!-- userに紐づくbooks一覧-->
+    <div class="col-xs-9">
+
+      <h1>Books</h1>
       <table class="table">
-        <!--alt="No image-->
+       <thead>
         <tr>
-          <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
-        </tr>
-        <tr>
-          <th>name</th>
-          <!--userを定義する-->
-          <th><%= @user.name %></th>
-        </tr>
-        <tr>
-          <th>introduction</th>
-          <th><%= @user.introduction %></th> <!--nameと色が違う-->
-        </tr>
-        <tr>
-         <!--user編集ページへのリンク設定,ボタンをよこに伸ばす-->
-         <th><button type="button" class="btn btn-default" aria-label="Left Align">
-            <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-            <%= link_to "Edit", edit_user_path(@user) %>  <!--editへのページ遷移-->
-          </button>
-         </th>
-       </tr>
+         <th></th>
+         <th>Title</th>
+         <th>opinion</th>
+         <td>
+         </tr>
+       </thead>
+       <tbody>
+         <% @user.books.each do |book| %>
+         <!--userモデルとbookモデルが紐づいてるからできる-->
+         <tr>
+           <td>image</td>　　　<!--修正-->
+           <td><%= book.title %></td>
+           <td><%= book.body %></td> <!--bookモデルのbodyが欲しい-->
+         </tr>
+         <% end %>
+       </tbody>
      </table>
    </div>
+ </div>
 
 
-   <!-- user一覧-->
-   <div class="col-xs-9">
-
-    <h1>Books</h1>
-    <table class="table">
-     <thead>
-      <tr>
-       <th></th>
-       <th>Title</th>
-       <th>opinion</th>
-       <td>
-     </tr>
-   </thead>
-   <tbody>
-     <% @user.books.each do |book| %>
-     <tr>
-       <td>image</td>　　　<!--修正-->
-       <td><%= book.title %></td><!--その投稿をしたユーザーのプロフィール詳細画面へ-->
-       <td><%= book.body %></td> <!--bookモデルのbody値が欲しい-->
-     </tr>
-     <% end %>
-   </tbody>
- </table>
-</div>
-</div>
+ <!--新規投稿-->
+ 　<%= render 'layouts/newbook', book: @book %>
 
 
-<!-- new book-->
-<div class="row">
-  <div class="col-xs-3">
-
-    <h1>New Book</h1>
-    <%= form_for(@book) do |f| %>
-<!--エラーメッセ--users/edit参照-->
-    <p>Title</p>
-    <%= f.text_area :title %>
-
-    <p>Opinion</p>
-    <%= f.text_field :body %>
-
-    <%= f.submit 'Create Book', class:"btn btn-primary" %>
-    <% end %>
-
-  </div>
-</div>
 </div>
