--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,16 +26,8 @@
 
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <nav class="nav navbar-nav navbar-left">
-        <!--あってもなくても変わらない?
-         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarEexample">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-  -->
-          <span>Bookers</span>
+        <nav class="nav navbar-nav navbar-left text-muted"">
+          <h3>Bookers</h3> <!--白色にしたい-->
         </nav>
 
           <ul class="nav navbar-nav navbar-right">
@@ -44,34 +36,28 @@
                 <%= link_to "Home", users_path, class: "glyphicon glyphicon-home home", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to 'Users', users_path %>
-                <span class="glyphicon glyphicon-user users" aria-hidden="true"></span>
+                <%= link_to 'Users', users_path, class: "glyphicon glyphicon-user users", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to 'Books', books_path %>
-                <span class="glyphicon glyphicon-book" aria-hidden="true"></span>
+                <%= link_to 'Books', books_path, class: "glyphicon glyphicon-book", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to "logout", destroy_user_session_path, method: :delete %>
-                <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+                <%= link_to "logout", destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-share", "aria-hidden": true %>
               </li>
 
             <% else %>
               <li>
-                <%= link_to "Home", root_path %>
-                <span class="glyphicon glyphicon-home home" aria-hidden="true"></span>
+                <%= link_to "Home", root_path, class: "glyphicon glyphicon-home home", "aria-hidden": true %>
+                <span ></span>
               </li>
               <li>
-                <%= link_to "About", homes_about_path %>
-                <span class="glyphicon glyphicon-link about" aria-hidden="true"></span>
+                <%= link_to "About", homes_about_path, class: "glyphicon glyphicon-link about", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to "Sign up", new_user_registration_path %>
-                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                <%= link_to "Sign up", new_user_registration_path, class: "glyphicon glyphicon-edit", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to "ログイン", new_user_session_path %>
-                <span class="glyphicon glyphicon-share" aria-hidden="true"></span>
+                <%= link_to "ログイン", new_user_session_path, class: "glyphicon glyphicon-share", "aria-hidden": true %>
               </li>
             <% end %>
           </ul>
