attachment_image_tag追加

--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,5 @@
+<!--ヘッダーと見出しがかぶるなぜ-->
+
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
@@ -13,7 +15,7 @@
         <div class="field">
            <p>Opinion</p>
            <%= f.text_area :body, class:"btn-block" %>
-           
+
            <div class="action">
             <button type="button" class="btn btn-primary btn-block">
                 Update Book
@@ -29,7 +31,6 @@
         <div class="copyright" %>
             <p>CopyRight Infratop.inc</p>
         </div>
-
+      </div>
     </div>
-</div>
 </div>
