--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
     <div class="col-xs-9">
 
       <h1>Books</h1>
-      <table class="table">
+      <table class="table table-striped">
        <thead>
         <tr>
          <th></th>
@@ -20,9 +20,9 @@
        <tbody>
          <% @user.books.each do |book| %>
          <!--userモデルとbookモデルが紐づいてるからできる-->
-         <tr>
-           <td>image</td>　　　<!--修正-->
-           <td><%= book.title %></td>
+         <tr><!--画像サイズの調節が必要-->
+           <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg' %></td>　　　<!--あくまでuserに紐づいている-->
+           <td><%= link_to book.title, book_path(book) %></td>
            <td><%= book.body %></td> <!--bookモデルのbodyが欲しい-->
          </tr>
          <% end %>
@@ -30,10 +30,6 @@
      </table>
    </div>
  </div>
-
-
- <!--新規投稿-->
- 　<%= render 'layouts/newbook', book: @book %>
 
 
 </div>
