--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,8 +18,8 @@
    　　　  </thead>
   　　　   <tbody>
     　　   <% @users.each do |user| %>
-     　　　  　<tr>
-       　　　  　<td>image</td>
+     　　　  　<tr> <!--代わりの画像も用意する-->
+       　　　  　<td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg' %></td>
                 <td><%= user.name %></td>
                 <td><%= link_to "Show", user_path(user.id) %></td>
                   <!--投稿をしたユーザーに紐づく-->
@@ -29,9 +29,5 @@
       </table>
     </div>
   </div>
-
-  <!--新規投稿-->
-　<%= render 'layouts/newbook', book: @book %>
-
 
 </div>
