[Topページ修正

--- a/app/views/layouts/_userinfo.html.erb
+++ b/app/views/layouts/_userinfo.html.erb
@@ -5,9 +5,15 @@
     <div class="col-xs-3">
       <h2>User info</h2>
       <table class="table">
-        <!--alt="No image-->
         <tr>
-          <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+
+
+<!--質問箇所、一時避難-ここまで-->
+
+     <%= image_tag('no_image.jpg', class: "img-circle pull-left profile-thumb", style: "width: 100px; height: 100px; margin-top: 20px;") %>
+
+
+<!--ここまでの範囲、あとで貼り付け-->
         </tr>
         <tr>
           <th>name</th>
