--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,28 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+body {
+    padding-top: 60px;
+}
 
+header .navbar-left span {
+    font-size: 20px;
+    padding-top: 10px;
+    color: white;
+}
+
+
+.btn-wrapper a{
+	color: #666666;
+}
+
+.nav>li>a {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+}
+
+.glyphicon-home:before{
+	content: "";
+
+}
