--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,19 +1,41 @@
 
-<div class="container">
+	<div class="container">
+		<div class="row">
+			<div class="top-message col-md-offset-3 col-md-6">
+				<h1>welcome to
+					<span class="glyphicon glyphicon-book" aria-hidden="true"></span><strong>Bookers !!</strong>
+				</h1>
+				<p>In <span class="glyphicon glyphicon-book"></span><strong>Bookers</strong></p>
 
-<h1>welcome to
-  <span class="glyphicon glyphicon-book" aria-hidden="true">Bookers !!</span>
-</h1>
-<p>In Bookers,<br>
+				<p>you can share and exchange your opinions , inpressions , and emotions</p>
 
-you can share and exchange your opinions , inpressions , and emotions<br>
-
-about various books!</p>
+				<p>about various books!</p>
 
 
 
-<p>CopyRight Infratop.inc</p>
-<%= link_to "Log in", new_user_session_path, class:"btn btn-info" %>
-<%= link_to "Sign up", new_user_registration_path, class:"btn btn-success btn-default" %>
 
-</div>
+				<div class="btn-wrapper">
+					<div class="row">
+						<p>
+							<a class="btn btn-info hover col-xs-10 col-xs-offset-1 sign_in" href="/users/sign_in">Log in</a>
+						</p>
+					</div>
+
+
+					<div class="row">
+						<p>
+							<a class="btn btn-success hover col-xs-10 col-xs-offset-1 sign_up" href="/users/sign_up">Sign Up</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="row">
+			<div class='col-xs-3 col-xs-offset-9'>
+				<p class="text-right">CopyRight Infratop.inc</p>
+			</div>
+		</div>
+
+	</div>
