--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,12 +25,12 @@
 
 
     <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <nav class="nav navbar-nav navbar-left text-muted"">
-          <h3>Bookers</h3> <!--白色にしたい-->
+      <div class="container ralative">
+        <nav class="nav navbar-nav navbar-left">
+          <span>Bookers</span> <!--なんで、text-whiteで文字色が白くならない？-->
         </nav>
 
-          <ul class="nav navbar-nav navbar-right">
+          <ul class="nav navbar-nav navbar-right small">
             <% if user_signed_in? %>
               <li>
                 <%= link_to "Home", users_path, class: "glyphicon glyphicon-home home", "aria-hidden": true %>
@@ -54,10 +54,10 @@
                 <%= link_to "About", homes_about_path, class: "glyphicon glyphicon-link about", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to "Sign up", new_user_registration_path, class: "glyphicon glyphicon-edit", "aria-hidden": true %>
+                <%= link_to "sign up", new_user_registration_path, class: "glyphicon glyphicon-edit", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to "ログイン", new_user_session_path, class: "glyphicon glyphicon-share", "aria-hidden": true %>
+                <%= link_to "login", new_user_session_path, class: "glyphicon glyphicon-share", "aria-hidden": true %>
               </li>
             <% end %>
           </ul>
