--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,8 +18,8 @@
 				</thead>
 				<tbody>
 					<% @books.each do |book| %>
-					<tr>
-						<td>image</td>　　　<!--画像修正-->
+					<tr><!--代わりの画像-->
+						<td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg' %></td>
 						<td><%= book.title %></td>
 						<td><%= book.body %></td>
 						<td><%= link_to 'Edit', edit_book_path(book), class: "label label-success" %>
