画像のサイズ調整

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,40 +1,49 @@
 
 <div class="container">
-	<div clsss="row">
+
+	<!-- <p id="notice"></p>-->
+
+
 		<!--use info -->
 		<%= render 'layouts/userinfo', user: @user %>
 
 
+
 		<!--book detail-->
 		<div class="col-xs-9">
-			<h1>Book detail</h1>
+			<h2>Book detail</h2>
 			<table class="table">
-				<thead>
-					<tr>
-						<th></th>
-						<th>Title</th>
-						<th>Opinion</th>
+				<tr>
+
 					</tr>
 				</thead>
 				<tbody>
 					<% @books.each do |book| %>
-					<tr><!--代わりの画像-->
-						<td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg' %></td>
+					<tr>
+						<td>
+						  <a>
+
+							<%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %><br>
+							<%= link_to @user.name, user_path(@user) %>
+						</a>
+						</td>
 						<td><%= book.title %></td>
 						<td><%= book.body %></td>
+
+
 						<td><%= link_to 'Edit', edit_book_path(book), class: "label label-success" %>
 						</td>
 						<td>
 							<%= link_to 'Destroy', book_path(book), method: :delete, data: { confirm: '本当に消しますか?'}, class: "label label-danger" %>
 						</td>
+
+
 					</tr>
 					<% end %>
 				</tbody>
 			</table>
 		</div>
 	</div>
-
-
 
 
 </div>
