--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div clsss="row">
     <!--use info -->
@@ -7,27 +6,31 @@
 
     <!--book一覧-->
     <div class="col-xs-9">
-      <h1>Books</h1>
-      <table class="table">
+      <h2>Books</h2>
+
+      <table class="table table-hover table-inverse">
         <thead>
           <tr>
             <th></th>
             <th>Title</th>
             <th>Opinion</th>
-          </tr>
+            <th colspan="3"></th>
+         </tr>
         </thead>
+
         <tbody>
           <% @books.each do |book| %>
           <tr>
-            <td></td>　　　<!--修正-->
-            <th><%= book.title %></th>
+            <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
+            <th><%= link_to book.title, book_path(book) %></th>
+
             <td><%= book.body %></td>
           </tr>
           <% end %>
         </tbody>
       </table>
     </div>
+
   </div>
-
-
 </div>
+
