--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,7 @@
   　　　   <tbody>
     　　   <% @users.each do |user| %>
      　　　  　<tr> <!--代わりの画像も用意する-->
-       　　　  　<td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg' %></td>
+       　　　  　<td><%= attachment_image_tag user, :profile_image, :fill, 100, 100, format: 'jpeg', size:'40x40' %></td>
                 <td><%= user.name %></td>
                 <td><%= link_to "Show", user_path(user.id) %></td>
                   <!--投稿をしたユーザーに紐づく-->
