--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,26 +7,27 @@
     <!-- userに紐づくbooks一覧-->
     <div class="col-xs-9">
 
-      <h1>Books</h1>
-      <table class="table table-striped">
-       <thead>
-        <tr>
-         <th></th>
-         <th>Title</th>
-         <th>opinion</th>
-         <td>
-         </tr>
-       </thead>
-       <tbody>
+      <h2>Books</h2>
+      
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
          <% @user.books.each do |book| %>
          <!--userモデルとbookモデルが紐づいてるからできる-->
          <tr><!--画像サイズの調節が必要-->
-           <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg' %></td>　　　<!--あくまでuserに紐づいている-->
+           <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>　　　<!--あくまでuserに紐づいている-->
            <td><%= link_to book.title, book_path(book) %></td>
            <td><%= book.body %></td> <!--bookモデルのbodyが欲しい-->
          </tr>
          <% end %>
-       </tbody>
+        </tbody>
      </table>
    </div>
  </div>
