--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,7 +18,8 @@
 					</tr>
 				</thead>
 				<tbody>
-					<% @books.each do |book| %>
+					<!--ユーザーに紐づく本の投稿一覧-->
+					<% @user.books.each do |book| %>
 					<tr>
 						<td>
 						  <a>
@@ -30,13 +31,13 @@
 						<td><%= book.title %></td>
 						<td><%= book.body %></td>
 
-
+						<% if book.user_id == current_user.id %>
 						<td><%= link_to 'Edit', edit_book_path(book), class: "label label-success" %>
 						</td>
 						<td>
 							<%= link_to 'Destroy', book_path(book), method: :delete, data: { confirm: '本当に消しますか?'}, class: "label label-danger" %>
 						</td>
-
+						<% end %>
 
 					</tr>
 					<% end %>
