ログイン機能修正

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div clsss="row">
     <!--use info -->
-    <%= render 'layouts/userinfo', user: @user %>
+    <!--current_userとしないとエラーになった-->
+    <%= render 'layouts/userinfo', user: current_user, book: @book %>
 
 
     <!--book一覧-->
