--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
   <div clsss="row">
 　　<!--user info-->
-  　<%= render 'layouts/userinfo', user: @user %>
+  　<%= render 'layouts/userinfo', user: current_user, book: @book %>
 
 
 
