--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div clsss="row">
-    <%= render 'layouts/userinfo', user: @user %>
+    <%= render 'layouts/userinfo', user: current_user, book: @book %>
 
 
 
@@ -8,7 +8,7 @@
     <div class="col-xs-9">
 
       <h2>Books</h2>
-      
+
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
