index,showページの機能修正

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,8 +20,8 @@
 							<%= link_to @user.name, user_path(@user) %>
 						</a>
 					</td>
-					<td>
-						<%= @onebook.title %>
+					<td><!--リンク先-->
+						<%= link_to @onebook.title, book_path(@onebook) %>
 					</td>
 					<td><%= @onebook.body %></td>
 					<td>
