--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,7 +20,8 @@
         </thead>
 
         <tbody>
-          <% @books.each do |book| %>
+          <!--user.books　追記-->
+          <% @user.books.each do |book| %>
           <tr>
             <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
             <th><%= link_to book.title, book_path(book) %></th>
