--- a/app/views/layouts/_userinfo.html.erb
+++ b/app/views/layouts/_userinfo.html.erb
@@ -1,5 +1,7 @@
-  <!--userinfo-->
 
+ <!--<p id="notice"></p>-->
+
+   <!--userinfo-->
   <div class="col-xs-3">
       <h2>User info</h2>
       <table class="table">
@@ -23,7 +25,6 @@
           <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
         <% end %>
       </div>
-     
 
 
       <!--新規投稿ページ-->
