--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,37 +27,37 @@
     <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container ralative">
         <nav class="nav navbar-nav navbar-left">
-          <span>Bookers</span> <!--なんで、text-whiteで文字色が白くならない？-->
+          <span>Bookers</span>
         </nav>
 
           <ul class="nav navbar-nav navbar-right small">
             <% if user_signed_in? %>
               <li>
-                <%= link_to "Home", user_path(@user), class: "glyphicon glyphicon-home home", "aria-hidden": true %>
+                <%= link_to " Home", user_path(@user), class: "glyphicon glyphicon-home home", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to 'Users', users_path, class: "glyphicon glyphicon-user users", "aria-hidden": true %>
+                <%= link_to ' Users', users_path, class: "glyphicon glyphicon-user users", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to 'Books', books_path, class: "glyphicon glyphicon-book", "aria-hidden": true %>
+                <%= link_to ' Books', books_path, class: "glyphicon glyphicon-book", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to "logout", destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-share", "aria-hidden": true %>
+                <%= link_to " logout", destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-share", "aria-hidden": true %>
               </li>
 
             <% else %>
               <li>
-                <%= link_to "Home", root_path, class: "glyphicon glyphicon-home home", "aria-hidden": true %>
+                <%= link_to " Home", root_path, class: "glyphicon glyphicon-home home", "aria-hidden": true %>
                 <span ></span>
               </li>
               <li>
-                <%= link_to "About", homes_about_path, class: "glyphicon glyphicon-link about", "aria-hidden": true %>
+                <%= link_to " About", homes_about_path, class: "glyphicon glyphicon-link about", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to "sign up", new_user_registration_path, class: "glyphicon glyphicon-edit", "aria-hidden": true %>
+                <%= link_to " sign up", new_user_registration_path, class: "glyphicon glyphicon-edit", "aria-hidden": true %>
               </li>
               <li>
-                <%= link_to "login", new_user_session_path, class: "glyphicon glyphicon-share", "aria-hidden": true %>
+                <%= link_to " login", new_user_session_path, class: "glyphicon glyphicon-share", "aria-hidden": true %>
               </li>
             <% end %>
           </ul>
