--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,36 +1,44 @@
 <div class="container">
   <div clsss="row">
-    <%= render 'layouts/userinfo', user: current_user, book: @book %>
+      <%= render 'layouts/userinfo', user: current_user, book: @book %>
 
 
 
-    <!-- userに紐づくbooks一覧-->
-    <div class="col-xs-9">
+      <!-- userに紐づくbooks一覧-->
+      <div class="col-xs-9">
 
-      <h2>Books</h2>
+        <h2>Books</h2>
 
-      <table class="table table-hover table-inverse">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
-            <th colspan="3"></th>
-          </tr>
-        </thead>
-        <tbody>
-         <% @user.books.each do |book| %>
-         <!--userモデルとbookモデルが紐づいてるからできる-->
-         <tr>
-           <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>　　　<!--あくまでuserに紐づいている-->
-           <td><%= link_to book.title, book_path(book) %></td>
-           <td><%= book.body %></td> <!--bookモデルのbodyが欲しい-->
-         </tr>
-         <% end %>
-        </tbody>
-     </table>
-   </div>
- </div>
+        <table class="table table-hover table-inverse">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Title</th>
+              <th>Opinion</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
 
+          <tbody>
+          　 <% @user.books.each do |book| %>
+           　<!--userモデルとbookモデルが紐づいてるからできる-->
+           　<tr>
+               <td>
+                  <%= link_to user_path(@user) do %>
+                  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %>
+                  <% end %>
+               </td>　　　<!--あくまでuserに紐づいている-->
+               <td>
+                  <%= link_to book.title, book_path(book) %>
+               </td>
+               <td>
+                  <%= book.body %>　<!--bookモデルのbodyが欲しい-->
+                </td>
+            </tr>
 
+            <% end %>
+          </tbody>
+        </table>
+    　</div>
+ 　</div>
 </div>
