--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,7 +5,7 @@
 
 
 		<!--use info -->
-		<%= render 'layouts/userinfo', user: current_user, book: @book %>
+		<%= render 'layouts/userinfo', user: @user, book: @book %>
 
 
 
