--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,8 +2,9 @@
   <div clsss="row">
     <!--use info -->
     <!--current_userとしないとエラーになった-->
+    <div class="col-xs-3">
     <%= render 'layouts/userinfo', user: current_user, book: @book %>
-
+   </div>
 
     <!--book一覧-->
     <div class="col-xs-9">
@@ -21,7 +22,7 @@
 
         <tbody>
           <!--user.books　追記-->
-          <% @user.books.each do |book| %>
+          <% @books.each do |book| %>
           <tr>
             <td><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
             <th><%= link_to book.title, book_path(book) %></th>
