投稿フォーム調整

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,11 +2,10 @@
 <div class="container">
 
 	<!-- <p id="notice"></p>-->
-
-
-		<!--use info -->
+	<!--use info -->
+	<div class="col-xs-3">
 		<%= render 'layouts/userinfo', user: @user, book: @book %>
-
+	</div>
 
 
 		<!--book detail-->
