--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <div clsss="row">
+    <div class="col-xs-3">
       <%= render 'layouts/userinfo', user: current_user, book: @book %>
-
+    </div>
 
 
       <!-- userに紐づくbooks一覧-->
