--- a/app/views/layouts/_userinfo.html.erb
+++ b/app/views/layouts/_userinfo.html.erb
@@ -2,7 +2,6 @@
  <!--<p id="notice"></p>-->
 
    <!--userinfo-->
-  <div class="col-xs-3">
       <h2>User info</h2>
       <table class="table">
         <tr>
@@ -48,21 +47,18 @@
 
               <div class="field row">
                 <label>Title</label>
-                <%= f.text_field :title %>
+                <%= f.text_field :title, class: 'form-control col-xs-12' %>
               </div>
 
               <div class="field row">
                 <label>Opinion</label>
-                <%= f.text_area :body %>
+                <%= f.text_area :body, class: 'form-control col-xs-12' %>
               </div>
 
               <div class="actions row">
-                <%= f.submit 'Create Book' %>
-                 <input type="submit" name="commit" value="Create Book" class="btn btn-primary col-xs-12">
-              </div>
+                <%= f.submit 'Create Book', class: 'btn btn-primary col-xs-12' %>
               </div>
 
           <% end %>
       </div>
-  </div>
 
