--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,34 +3,31 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-           <h1>Editing Book</h1>
+          <h1>Editing Book</h1>
 
-           <%= form_for(@book) do |f| %>
+          <%= form_for(@book) do |f| %>
+
            <!--エラーメッセージを挿入user/edit-->
-           <div class="field">
-            <p>Title</p>
-            <%= f.text_field :title, class:"btn-block" %>
-        </div>
+            <div class="field row">
+                <label>Title</label>
+                <%= f.text_field :title, class:'form-control col-xs-12' %>
+            </div>
 
-        <div class="field">
-           <p>Opinion</p>
-           <%= f.text_area :body, class:"btn-block" %>
+            <div class="field row">
+               <label>Opinion</label>
+               <%= f.text_area :body, class:'form-control col-xs-12' %>
+            </div>
 
-           <div class="action">
-            <button type="button" class="btn btn-primary btn-block">
-                Update Book
-            </button>
-        </div>
 
-        <div class="links" >
-            <%= link_to 'Show', book_path(@book) %>
-            <%= link_to 'Back', books_path %>
-            <% end %>
-        </div>
+            <div class="actions row">
+                <%= f.submit 'Update Book', class:'btn btn-primary col-xs-12' %>
+            </div>
 
-        <div class="copyright" %>
-            <p>CopyRight Infratop.inc</p>
-        </div>
-      </div>
+          <% end %>
+
+          <div class="links" >
+              <%= link_to 'Show', book_path(@book) %>
+              <%= link_to 'Back', books_path %>
+          </div>
     </div>
 </div>
