--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,8 @@
-<h1>Welcome to
-	<span class="glyphicon glyphicon-book" aria-hidden="true">Bookers!</span>
-</h1>
+<div class="container">
 
+
+	<h1>Welcome to
+		<span class="glyphicon glyphicon-book" aria-hidden="true"></span><strong>Bookers!</strong></h1>
+
+</div>
 
