--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
 
     <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container ralative">
+      <div class="container">
         <nav class="nav navbar-nav navbar-left">
           <span>Bookers</span>
         </nav>
@@ -51,7 +51,7 @@
                 <span ></span>
               </li>
               <li>
-                <%= link_to " About", homes_about_path, class: "glyphicon glyphicon-link about", "aria-hidden": true %>
+                <%= link_to " About", home_about_path, class: "glyphicon glyphicon-link about", "aria-hidden": true %>
               </li>
               <li>
                 <%= link_to " sign up", new_user_registration_path, class: "glyphicon glyphicon-edit", "aria-hidden": true %>
