--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,4 +1,4 @@
-<!--ヘッダーと見出しがかぶるなぜ-->
+<div class="box">
 
 <div class="container">
     <div class="row">
@@ -43,4 +43,6 @@
               <%= link_to 'Back', books_path %>
           </div>
     </div>
+</div>
+</div>
 </div>
