--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 
 
     <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
+      <div class="container header-list">
         <nav class="nav navbar-nav navbar-left">
           <span>Bookers</span>
         </nav>
@@ -63,11 +63,16 @@
           </ul>
         </nav>
       </div>
+      </div>
     </header>
 
 
 
+
   <%= yield %>
+
+
+
 
      <footer>
   <div class='container'>
