--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,10 @@
-<div class="container">
-  <div clsss="row">
+<div class="body">
+  <div class="container">
+    <div class="row">
 
-    <div class="col-xs-3">
-      <%= render 'layouts/userinfo', user: @user, book: @book %>
-    </div>
+      <div class="col-xs-3">
+        <%= render 'layouts/userinfo', user: @user, book: @book %>
+      </div>
 
 
       <!-- userに紐づくbooks一覧-->
@@ -22,25 +23,26 @@
           </thead>
 
           <tbody>
-          　 <% @user.books.each do |book| %>
-           　<!--userモデルとbookモデルが紐づいてるからできる-->
-           　<tr>
-               <td><!--""で書き換えてもだめ-->
-                  <%= link_to user_path(@user) do %>
-                  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %>
-                  <% end %>
-               </td>　　　<!--attachment_image_tagはあくまでuserに紐づいている-->
-               <td>
-                  <%= link_to book.title, book_path(book) %>
-               </td>
-               <td>
-                  <%= book.body %>　<!--bookモデルのbodyが欲しい-->
-                </td>
-            </tr>
+            　 <% @user.books.each do |book| %>
+            　<!--userモデルとbookモデルが紐づいてるからできる-->
+            　<tr>
+             <td><!--""で書き換えてもだめ-->
+              <%= link_to user_path(@user) do %>
+              <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %>
+              <% end %>
+            </td>　　　<!--attachment_image_tagはあくまでuserに紐づいている-->
+            <td>
+              <%= link_to book.title, book_path(book) %>
+            </td>
+            <td>
+              <%= book.body %>　<!--bookモデルのbodyが欲しい-->
+            </td>
+          </tr>
 
-            <% end %>
-          </tbody>
-        </table>
+          <% end %>
+        </tbody>
+      </table>
     　</div>
- 　</div>
+  　</div>
+</div>
 </div>
